app-test/testdata/typesystem/neg/type-assertion-algebraic-type-to-any-type/check/assert.check
testdata/typesystem/neg/type-assertion-algebraic-type-to-any-type/src/assert.cal:5:21: error: Cannot type assert T to int.
            OUT <-- (T(1, false) :: int); // error
                    ^^^^^^^^^^^^^^^^^^^^